# gamegoly

./: .gitignore  Cargo.toml  README.md  field.json  player.json
src/: config.rs  config_field.rs  config_player.rs  main.rs  slint_callbacks.rs  slint_setter.rs  slint_structs.rs  slint_sturcts.rs  utils.rs
ui/: FieldTile.slint  adapters.slint  appwindow.slint  field.slint  field_data.slint  field_tile.slint  info_panel.slint  lower_panel.slint
