[package]
name = "gamegoly"
version = "0.1.0"
authors = ["laniavea <laniavea@yahoo.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoserde = "0.1.37"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
